--- a/roles/common/tasks/add-app-users.yml
+++ b/roles/common/tasks/add-app-users.yml
@@ -1,13 +1,17 @@
 ---
 - include_vars: app_users.yml
 
-- name: Create App Group
-  group: name={{ app_name }}
+#- name: Create App Group
+#  group: name={{ app_name }}
+
+- name: Debug AppUserList
+  debug: msg="{{ app_user_list }}"
 
 - name: Create App User Accounts
   user: name={{ item }} groups={{ app_name }} shell=/bin/bash createhome=yes password={{ password }}
-  #  with_items: app_user_list
-  with_items: "{{app_name}}-users"
+  with_items: app_user_list
+
+  #  with_items: "{{app_name}}-users"
   #
   # Errors because ansible doesn't see the lists named {{ app-name }}-users in roles/common/vars/app_users.yml
   # ansible doesn't error when app_user_list is a list instead of a var,
